DTS-48150: separate collections for new scm processor